--- a/index.html
+++ b/index.html
@@ -3715,12 +3715,10 @@ div.tocify {
 <div id="upcoming-meetups" class="section level2">
 <h2>Upcoming Meetups</h2>
 <div>
-<h3>R and Python</h3>
-<h4>Tuesday, May 29, 2018 at 07:00pm</h4>
-<p><table id="meta"><tbody> <tr><td style="text-align: center"><i class="fa fa-map-marker"></i></td><td style="text-align: left">Southern Brewing & Winemaking</td></tr>
-<tr><td style="text-align: center"><i class="fa fa-location-arrow"></i></td><td style="text-align: left"><a href="https://maps.google.com/?ll=27.9862041473389,-82.4514465332031">4500 North Nebraska Avenue, Tampa</a></td></tr>
-<tr><td style="text-align: center"><i class="fa fa-external-link"></i></td><td style="text-align: left"><a href="https://www.meetup.com/Tampa-R-Users-Group/events/250689598/">https://www.meetup.com/Tampa-R-Users-Group/events/250689598/</a></td></tr> </tbody></table></p>
-<blockquote><p>• What we'll do<br/>Madhi Goudarzi will walk us through integrating R and Python.</p> <p>• What to bring<br/>If you wish to bring a laptop to follow along, code and slides will be posted ~24 hours in advance at <a href="https://github.com/tgerke/TampaUseRs" class="linkified">https://github.com/tgerke/TampaUseRs</a></p> </blockquote>
+<p>
+We try to meet on the fourth Tuesday of each month,
+but our next meetup has not yet been announced. Check back soon!
+</p>
 </div>
 </div>
 <div id="past-meetups" class="section level2">
