Add Minh Pham 2018-06-19

--- a/index.html
+++ b/index.html
@@ -3715,16 +3715,18 @@ div.tocify {
 <div id="upcoming-meetups" class="section level2">
 <h2>Upcoming Meetups</h2>
 <div>
-<p>
-We try to meet on the fourth Tuesday of each month,
-but our next meetup has not yet been announced. Check back soon!
-</p>
+<h3>Basic Machine Learning Techniques!</h3>
+<h4>Tuesday, Jun 19, 2018 at 07:00pm</h4>
+<p><table id="meta"><tbody> <tr><td style="text-align: center"><i class="fa fa-map-marker"></i></td><td style="text-align: left">Southern Brewing & Winemaking</td></tr>
+<tr><td style="text-align: center"><i class="fa fa-location-arrow"></i></td><td style="text-align: left"><a href="https://maps.google.com/?ll=27.9862041473389,-82.4514465332031">4500 North Nebraska Avenue, Tampa</a></td></tr>
+<tr><td style="text-align: center"><i class="fa fa-external-link"></i></td><td style="text-align: left"><a href="https://www.meetup.com/Tampa-R-Users-Group/events/251651277/">https://www.meetup.com/Tampa-R-Users-Group/events/251651277/</a></td></tr> </tbody></table></p>
+<blockquote><p>• What we'll do<br/>Minh Pham will walk us through basic machine learning techniques.</p> <p>• What to bring<br/>If you wish to bring a laptop to follow along, code and slides will be posted ~24 hours in advance at <a href="https://github.com/TampaUseRs/TampaUseRs/tree/master/meetups" class="linkified">https://github.com/TampaUseRs/TampaUseRs/tree/master/meetups</a></p> </blockquote>
 </div>
 </div>
 <div id="past-meetups" class="section level2">
 <h2>Past Meetups</h2>
-<div id="htmlwidget-07d40140774cae74b4c0" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-07d40140774cae74b4c0">{"x":{"filter":"none","autoHideNavigation":true,"data":[["2018-05-29","2018-04-24","2018-03-29","2018-02-37","2018-01-23","2017-11-28","2017-10-17"],["Mahdi Goudarzi","Kris Kindle","Jordan Creed","Mark Dayton","<a href=\"https://www.garrickadenbuie.com\">Garrick Aden-Buie<\/a>","Josh Levy","<a href=\"https://twitter.com/travisgerke\">Travis Gerke<\/a>"],["<a href=\"https://github.com/TampaUseRs/TampaUseRs/tree/master/meetups/20180529-python-and-r\">Integrating Python and R<\/a>","<a href=\"https://github.com/TampaUseRs/TampaUseRs/tree/master/meetups/20180424-shiny-server\">Shiny Server<\/a>","<a href=\"https://github.com/jhcreed/Rmeetup_20180329\">Building Shiny Apps<\/a>","<a href=\"https://github.com/mark-rrnr/webscraping-tutorial\">Scraping the web with R<\/a>","<a href=\"https://github.com/gadenbuie/trug-ggplot2\">A Gentle Guide to the Grammar of Graphics with ggplot2<\/a>","<a href=\"https://github.com/TampaUseRs/TampaUseRs/tree/master/meetups/20171128-dplyr\">Using dplyr!<\/a>","<a href=\"https://github.com/TampaUseRs/TampaUseRs/tree/master/meetups/20171017-inaugural\">Inaugural Tampa R Users Meetup!<\/a>"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>Date<\/th>\n      <th>Presenter<\/th>\n      <th>Topic<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":25,"dom":"ftp","order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-c4b7c54007b06eaa4014" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-c4b7c54007b06eaa4014">{"x":{"filter":"none","autoHideNavigation":true,"data":[["2018-05-29","2018-04-24","2018-03-29","2018-02-37","2018-01-23","2017-11-28","2017-10-17"],["Mahdi Goudarzi","Kris Kindle","Jordan Creed","Mark Dayton","<a href=\"https://www.garrickadenbuie.com\">Garrick Aden-Buie<\/a>","Josh Levy","<a href=\"https://twitter.com/travisgerke\">Travis Gerke<\/a>"],["<a href=\"https://github.com/TampaUseRs/TampaUseRs/tree/master/meetups/20180529-python-and-r\">Integrating Python and R<\/a>","<a href=\"https://github.com/TampaUseRs/TampaUseRs/tree/master/meetups/20180424-shiny-server\">Shiny Server<\/a>","<a href=\"https://github.com/jhcreed/Rmeetup_20180329\">Building Shiny Apps<\/a>","<a href=\"https://github.com/mark-rrnr/webscraping-tutorial\">Scraping the web with R<\/a>","<a href=\"https://github.com/gadenbuie/trug-ggplot2\">A Gentle Guide to the Grammar of Graphics with ggplot2<\/a>","<a href=\"https://github.com/TampaUseRs/TampaUseRs/tree/master/meetups/20171128-dplyr\">Using dplyr!<\/a>","<a href=\"https://github.com/TampaUseRs/TampaUseRs/tree/master/meetups/20171017-inaugural\">Inaugural Tampa R Users Meetup!<\/a>"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>Date<\/th>\n      <th>Presenter<\/th>\n      <th>Topic<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":25,"dom":"ftp","order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
 </div>
 <div id="sponsors" class="section level2">
 <h2>Sponsors</h2>
