--- a/readme.html
+++ b/readme.html
@@ -265,8 +265,8 @@ devtools::install_github(&quot;rladies/meetupr&quot;)</code></pre>
 <div id="deploying" class="section level2">
 <h2>Deploying</h2>
 <p>The website is rendered using <code>rmarkdown::render_site()</code>. Make any changes and run this function. To update the upcoming meetups, remove <code>upcoming.rds</code> (if it exists) first.</p>
-<p>Commit your changes into a feature branch (include both source <code>*.Rmd</code> or <code>.md</code> files and <code>docs/</code>). Push to the <a href="https://github.com/TampaUseRs/TampaUseRs">TampUseRs github repo</a> and submit a PR.</p>
-<p>GitHub Pages is autmatically enabled to serve from the <code>docs/</code> folder of the master branch to <a href="https://tampausers.github.io" class="uri">https://tampausers.github.io</a></p>
+<p>Commit your changes into a feature branch (include both source <code>*.Rmd</code> or <code>.md</code> files and rendered <code>.html</code> files.). Push to the <a href="https://github.com/TampaUseRs/TampaUseRs">TampUseRs github repo</a> and submit a PR.</p>
+<p>GitHub Pages is autmatically enabled to serve from the master branch to <a href="https://tampausers.github.io" class="uri">https://tampausers.github.io</a></p>
 </div>
 <div id="required-packages" class="section level2">
 <h2>Required Packages</h2>
