--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<link href="site_libs/font-awesome-5.0.13/css/fa-svg-with-js.css" rel="stylesheet" />
-<script src="site_libs/font-awesome-5.0.13/js/fontawesome-all.min.js"></script>
-<script src="site_libs/font-awesome-5.0.13/js/fa-v4-shims.min.js"></script>
+<link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
 <script src="site_libs/htmlwidgets-1.3/htmlwidgets.js"></script>
 <link href="site_libs/datatables-css-0.0.0/datatables-crosstalk.css" rel="stylesheet" />
 <script src="site_libs/datatables-binding-0.5/datatables.js"></script>
@@ -108,6 +107,9 @@ img {
 button.code-folding-btn:focus {
   outline: none;
 }
+summary {
+  display: list-item;
+}
 </style>
 
 
@@ -122,7 +124,6 @@ body {
   padding-top: 71px;
   margin-top: -71px;
 }
-
 .section h2 {
   padding-top: 71px;
   margin-top: -71px;
@@ -142,6 +143,43 @@ body {
 .section h6 {
   padding-top: 71px;
   margin-top: -71px;
+}
+.dropdown-submenu {
+  position: relative;
+}
+.dropdown-submenu>.dropdown-menu {
+  top: 0;
+  left: 100%;
+  margin-top: -6px;
+  margin-left: -1px;
+  border-radius: 0 6px 6px 6px;
+}
+.dropdown-submenu:hover>.dropdown-menu {
+  display: block;
+}
+.dropdown-submenu>a:after {
+  display: block;
+  content: " ";
+  float: right;
+  width: 0;
+  height: 0;
+  border-color: transparent;
+  border-style: solid;
+  border-width: 5px 0 5px 5px;
+  border-left-color: #cccccc;
+  margin-top: 5px;
+  margin-right: -10px;
+}
+.dropdown-submenu:hover>a:after {
+  border-left-color: #ffffff;
+}
+.dropdown-submenu.pull-left {
+  float: none;
+}
+.dropdown-submenu.pull-left>.dropdown-menu {
+  left: -100%;
+  margin-left: 10px;
+  border-radius: 6px 0 6px 6px;
 }
 </style>
 
@@ -163,18 +201,77 @@ $(document).ready(function () {
 });
 </script>
 
-
 <div class="container-fluid main-container">
 
 <!-- tabsets -->
+
+<style type="text/css">
+.tabset-dropdown > .nav-tabs {
+  display: inline-table;
+  max-height: 500px;
+  min-height: 44px;
+  overflow-y: auto;
+  background: white;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
+.tabset-dropdown > .nav-tabs > li.active:before {
+  content: "";
+  font-family: 'Glyphicons Halflings';
+  display: inline-block;
+  padding: 10px;
+  border-right: 1px solid #ddd;
+}
+
+.tabset-dropdown > .nav-tabs.nav-tabs-open > li.active:before {
+  content: "&#xe258;";
+  border: none;
+}
+
+.tabset-dropdown > .nav-tabs.nav-tabs-open:before {
+  content: "";
+  font-family: 'Glyphicons Halflings';
+  display: inline-block;
+  padding: 10px;
+  border-right: 1px solid #ddd;
+}
+
+.tabset-dropdown > .nav-tabs > li.active {
+  display: block;
+}
+
+.tabset-dropdown > .nav-tabs > li > a,
+.tabset-dropdown > .nav-tabs > li > a:focus,
+.tabset-dropdown > .nav-tabs > li > a:hover {
+  border: none;
+  display: inline-block;
+  border-radius: 4px;
+}
+
+.tabset-dropdown > .nav-tabs.nav-tabs-open > li {
+  display: block;
+  float: none;
+}
+
+.tabset-dropdown > .nav-tabs > li {
+  display: none;
+}
+</style>
+
 <script>
 $(document).ready(function () {
   window.buildTabsets("TOC");
 });
+
+$(document).ready(function () {
+  $('.tabset-dropdown > .nav-tabs > li').click(function () {
+    $(this).parent().toggleClass('nav-tabs-open')
+  });
+});
 </script>
 
 <!-- code folding -->
-
 
 
 
@@ -279,16 +376,18 @@ $("a[href^='#']").click(function() {
 <div id="upcoming-meetups" class="section level2">
 <h2>Upcoming Meetups</h2>
 <div>
-<p>
-We try to meet on the fourth Tuesday of each month,
-but our next meetup has not yet been announced. Check back soon!
-</p>
+<h3>R December Meetup!</h3>
+<h4>Tuesday, Dec 18, 2018 at 07:00pm</h4>
+<p><table id="meta"><tbody> <tr><td style="text-align: center"><i class="fa fa-map-marker"></i></td><td style="text-align: left">Southern Brewing & Winemaking</td></tr>
+<tr><td style="text-align: center"><i class="fa fa-location-arrow"></i></td><td style="text-align: left"><a href="https://maps.google.com/?ll=27.9862041473389,-82.4514465332031">4500 North Nebraska Avenue, Tampa</a></td></tr>
+<tr><td style="text-align: center"><i class="fa fa-external-link"></i></td><td style="text-align: left"><a href="https://www.meetup.com/Tampa-R-Users-Group/events/256939751/">https://www.meetup.com/Tampa-R-Users-Group/events/256939751/</a></td></tr> </tbody></table></p>
+<blockquote><p>• What we'll do<br/>Due to the busy nature of December for many of our members, we will not have a speaker for this month. Instead this meetup will just be an opportunity to meet and mingle with your fellow R users. We will resume our normal schedule in January.</p> <p>• What to bring<br/>Yourself!</p> <p>• Where we'll be<br/>We will be outside so plan accordingly!</p> </blockquote>
 </div>
 </div>
 <div id="past-meetups" class="section level2">
 <h2>Past Meetups</h2>
-<div id="htmlwidget-75f6d80dcc52f527a02a" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-75f6d80dcc52f527a02a">{"x":{"filter":"none","autoHideNavigation":true,"data":[["2018-11-15","2018-08-28","2018-07-24","2018-06-19","2018-05-29","2018-04-24","2018-03-29","2018-02-37","2018-01-23","2017-11-28","2017-10-17"],["Michael Mooney","<a href=\"https://twitter.com/vkegel\">Vince Kegel<\/a>","<a href=\"http://thomas-keller.github.io\">Thomas Keller<\/a>","<a href=\"http://minhp.weebly.com\">Minh Pham<\/a>","Mahdi Goudarzi","Kris Kindle","Jordan Creed","Mark Dayton","<a href=\"https://www.garrickadenbuie.com\">Garrick Aden-Buie<\/a>","Josh Levy","<a href=\"https://twitter.com/travisgerke\">Travis Gerke<\/a>"],["<a href=\"https://github.com/TampaUseRs/TampaUseRs/tree/master/meetups/20181023-powerBI-and-Bert\">R with Power BI and Tableau<\/a>","<a href=\"https://github.com/TampaUseRs/TampaUseRs/tree/master/meetups/20180828-tensorflow\">Intro to Keras/TensorFlow<\/a>","<a href=\"https://github.com/TampaUseRs/TampaUseRs/tree/master/meetups/20180724-twitter-networks\">Analyzing Social Networks with rtweet and special guestr<\/a>","<a href=\"https://github.com/TampaUseRs/TampaUseRs/tree/master/meetups/20180619-machine-learning\">Basic Machine Learning Techniques<\/a>","<a href=\"https://github.com/TampaUseRs/TampaUseRs/tree/master/meetups/20180529-python-and-r\">Integrating Python and R<\/a>","<a href=\"https://github.com/TampaUseRs/TampaUseRs/tree/master/meetups/20180424-shiny-server\">Shiny Server<\/a>","<a href=\"https://github.com/jhcreed/Rmeetup_20180329\">Building Shiny Apps<\/a>","<a href=\"https://github.com/mark-rrnr/webscraping-tutorial\">Scraping the web with R<\/a>","<a href=\"https://github.com/gadenbuie/trug-ggplot2\">A Gentle Guide to the Grammar of Graphics with ggplot2<\/a>","<a href=\"https://github.com/TampaUseRs/TampaUseRs/tree/master/meetups/20171128-dplyr\">Using dplyr!<\/a>","<a href=\"https://github.com/TampaUseRs/TampaUseRs/tree/master/meetups/20171017-inaugural\">Inaugural Tampa R Users Meetup!<\/a>"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>Date<\/th>\n      <th>Presenter<\/th>\n      <th>Topic<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":25,"dom":"ftp","order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-3fabee85ff330eb0e333" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-3fabee85ff330eb0e333">{"x":{"filter":"none","autoHideNavigation":true,"data":[["2018-11-15","2018-08-28","2018-07-24","2018-06-19","2018-05-29","2018-04-24","2018-03-29","2018-02-37","2018-01-23","2017-11-28","2017-10-17"],["Michael Mooney","<a href=\"https://twitter.com/vkegel\">Vince Kegel<\/a>","<a href=\"http://thomas-keller.github.io\">Thomas Keller<\/a>","<a href=\"http://minhp.weebly.com\">Minh Pham<\/a>","Mahdi Goudarzi","Kris Kindle","Jordan Creed","Mark Dayton","<a href=\"https://www.garrickadenbuie.com\">Garrick Aden-Buie<\/a>","Josh Levy","<a href=\"https://twitter.com/travisgerke\">Travis Gerke<\/a>"],["<a href=\"https://github.com/TampaUseRs/TampaUseRs/tree/master/meetups/20181023-powerBI-and-Bert\">R with Power BI and Tableau<\/a>","<a href=\"https://github.com/TampaUseRs/TampaUseRs/tree/master/meetups/20180828-tensorflow\">Intro to Keras/TensorFlow<\/a>","<a href=\"https://github.com/TampaUseRs/TampaUseRs/tree/master/meetups/20180724-twitter-networks\">Analyzing Social Networks with rtweet and special guestr<\/a>","<a href=\"https://github.com/TampaUseRs/TampaUseRs/tree/master/meetups/20180619-machine-learning\">Basic Machine Learning Techniques<\/a>","<a href=\"https://github.com/TampaUseRs/TampaUseRs/tree/master/meetups/20180529-python-and-r\">Integrating Python and R<\/a>","<a href=\"https://github.com/TampaUseRs/TampaUseRs/tree/master/meetups/20180424-shiny-server\">Shiny Server<\/a>","<a href=\"https://github.com/jhcreed/Rmeetup_20180329\">Building Shiny Apps<\/a>","<a href=\"https://github.com/mark-rrnr/webscraping-tutorial\">Scraping the web with R<\/a>","<a href=\"https://github.com/gadenbuie/trug-ggplot2\">A Gentle Guide to the Grammar of Graphics with ggplot2<\/a>","<a href=\"https://github.com/TampaUseRs/TampaUseRs/tree/master/meetups/20171128-dplyr\">Using dplyr!<\/a>","<a href=\"https://github.com/TampaUseRs/TampaUseRs/tree/master/meetups/20171017-inaugural\">Inaugural Tampa R Users Meetup!<\/a>"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>Date<\/th>\n      <th>Presenter<\/th>\n      <th>Topic<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":25,"dom":"ftp","order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
 </div>
 <div id="speaker-resources" class="section level2">
 <h2>Speaker Resources</h2>
